--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "UNLICENSED",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "dotenv": "^12.0.3",
     "express": "^4.17.2",
+    "express-useragent": "^1.0.15",
+    "mongodb": "^4.3.0",
     "pug": "^3.0.2"
   }
 }
