--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "Fixed risk-estimator",
   "main": "server.js",
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "tailwind": "npx tailwindcss -i ./tailwind/input.css -o ./static/libraries/css/tailwind.css --watch --minify",
+    "render-views": "node render-views.js"
   },
   "author": "AGALEPA feat. sevora",
   "license": "UNLICENSED",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "daisyui": "^1.24.3",
     "dotenv": "^12.0.3",
     "express": "^4.17.2",
     "express-useragent": "^1.0.15",
+    "glob": "^7.2.0",
     "mongodb": "^4.3.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "tailwindcss": "^3.0.15"
   }
 }
