--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^1.24.3",
     "dotenv": "^12.0.3",
     "express": "^4.17.2",
+    "express-force-https": "^1.0.0",
     "express-useragent": "^1.0.15",
     "glob": "^7.2.0",
     "mongodb": "^4.3.0",
